--- a/app/assets/stylesheets/bootstrap-ie6.css
+++ b/app/assets/stylesheets/bootstrap-ie6.css
@@ -144,7 +144,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft YaHei";
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -641,7 +641,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft YaHei";
 }
 label {
   display: block;
@@ -3926,7 +3926,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft YaHei";
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
