--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4956,10 +4956,10 @@ html[xmlns] .slides{
   transform:skewY(1.5deg) translate3d(0,0,0);
 }
 
-.index-block-list{ width: 50%; padding-left: 3.8%;}
+.index-block-list{ width: 50%; padding: 3.8%;}
 .index-page-content{font-size: 0;}
 @media (max-width:640px){
-  .index-page-content .index-block-list:first-child{padding-left: 0;}
+  .index-page-content .index-block-list{padding: 0 1.9%;}
 }
 
 
