--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
             <a href="/nodes/1"><h2 class="hero__title"></h2></a>
             <a class="button hero__button" href="/nodes/1">了解更多</a>
           </div>
-          <%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
+          <a href="/nodes/1"><%= image_tag "origin/A_voice_for_animals_HORSE_1920_x_650_300KB.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %></a>
         </li>
         <li>
           <div class="container skew">
