--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4265,16 +4265,16 @@ h1{
   -moz-border-radius:60px;
   -webkit-border-radius:60px;
   border-radius:60px;
-  font-size:0.625em;
-  line-height:1.2em;
+  font-size:12px;
+  line-height:60px;
   background:#ff9e16;
   position:absolute;
-  right:2em;
-  top:5em;
-  width:80px;
-  height:80px;
-  padding-top:24px;
-  display:none;
+  right:5px;
+  top:10px;
+  width:70px;
+  height:70px;
+  padding:4px;
+  display:block;
 }
 .hero__button{
   line-height:80px;
