--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4265,6 +4265,18 @@ h1{
   -moz-border-radius:60px;
   -webkit-border-radius:60px;
   border-radius:60px;
+  font-size:0.625em;
+  line-height:1.2em;
+  background:#ff9e16;
+  position:absolute;
+  right:2em;
+  top:5em;
+  width:80px;
+  height:80px;
+  padding-top:24px;
+  display:none;
+}
+.hero__button{
   font-size:12px;
   line-height:60px;
   background:#ff9e16;
@@ -4274,12 +4286,7 @@ h1{
   width:70px;
   height:70px;
   padding:4px;
-  display:block;
-}
-.hero__button{
-  line-height:80px;
-  height:80px;
-  padding-top:0;
+  display: block;
 }
 .hero.flexslider .slides li{
   overflow:hidden;
