--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1118,7 +1118,7 @@ blockquote p:last-child{
   margin:0 0 0 -4px;
   color:#fff;
   -webkit-backface-visibility:visible;
-  text-shadow:0 2px 40px rgba(0,0,0,0.8);
+  text-shadow:0 0 0 rgba(0,0,0,0.8);
 }
 .oldie .page-title{
   background-repeat:repeat-x;
