VEG1_426_new.png   link

--- a/app/views/nodes/show_list_single_big_img.html.erb
+++ b/app/views/nodes/show_list_single_big_img.html.erb
@@ -70,7 +70,7 @@
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"></a>
+              <div id="banner"><a class="link" href="/nodes/21"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"></a>
               </div>  
             </div>
           </div>        
