--- a/app/views/nodes/show_list_single.html.erb
+++ b/app/views/nodes/show_list_single.html.erb
@@ -69,7 +69,7 @@
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><%= image_tag "origin/VEG1_426_new.png", alt:"The Vegan Shop" %></a></div>  
+              <div id="banner"><a class="link" href="/nodes/21"><%= image_tag "origin/VEG1_426_new.png", alt:"The Vegan Shop" %></a></div>  
             </div>
           </div>
         </aside>
