app/assets/stylesheets/origin/css_yvjdhf.css.erb

--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -974,7 +974,8 @@ a{
   text-decoration:none;
 }
 a:hover{
-  text-decoration:underline;
+  text-decoration:none;
+  color: #ff9e16;
 }
 .region-content a,
 .custom-breadcrumbs a{
