--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,7 +40,7 @@
               <a href="/nodes/76">尝试21天挑战？</a>
             </h2>
 
-            <p>我们在这里帮你“尝试VEGAN”一个月或一周</p>
+            <p>我们在这里帮你“尝试VEGAN”21天</p>
             <a href="/nodes/76" class="button try-it__button">去看看!</a>
           </aside>
 
