--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -104,7 +104,7 @@
             <div class="take-action__inner-container">
               <div class="take-action__panel">
                 <h3 class="take-action__sub-title">
-                  <a href="/nodes/3">热爱素食生活</a>
+                  <a href="/nodes/3">热爱VEGAN生活</a>
                 </h3>
                 <p class="take-action__excerpt">不仅仅是素食主义者喜欢素食生活，每个人都会喜欢的。</p>
                 <a href="/nodes/3" class="button take-action__button">喜欢</a>
