--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -984,6 +984,9 @@ a:hover{
 .block-list a{
   color:#01dcd9;
 }
+.block-list a:hover{
+  color: #ff9e16;
+}
 #tinymce{
   max-width:860px;
   padding:1.5em;
@@ -1484,6 +1487,7 @@ blockquote p:last-child{
 .button:hover{
   text-decoration:none;
   cursor:pointer;
+  color: #ff9e16;
 }
 .campaign__page{
   padding:0;
@@ -2448,6 +2452,7 @@ textarea{
 }
 .hero__button:hover{
   background:#01dcd9;
+  color: #fff;
 }
 .flexslider .slides{
   padding-top:90px;
@@ -2550,8 +2555,11 @@ textarea{
 .take-action__sub-title a{
   color:#fff;
 }
+.take-action__sub-title a{
+  color:#fff;
+}
 .take-action__button:hover{
-  background:#01dcd9;
+  background:#ff9e16;
 }
 .volunteer-sign-up{
   font-size:0.875em;
