--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
         <li>
           <div class="container skew">
             <a href="javascript:void(0)"><h2 class="hero__title"></h2></a>
-            <a class="button hero__button" href="javascript:void(0)">了解更多</a>
+            <a class="button hero__button" href="/nodes/80">了解更多</a>
           </div>
           <%= image_tag "origin/shutterstock_94440970.jpg", width: "1920", height: "650", draggable: "true", typeof: "foaf:Image", class: "hero__image" %>
         </li>
