暂时屏蔽我的账户的入口

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -13,9 +13,9 @@
       </a> -->
 
 
-      <div class="user-login">
+<!--       <div class="user-login">
         <a href="/admin">我的账户</a>
-      </div>
+      </div> -->
       
       <div class="site-nav">
         <ul class="site-nav__item">
