--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -8,8 +8,8 @@
         <div class="region region-footer"> 
         </div>
       </nav>
-      <span class="small-print">Reg. Charity No: 279228 Company Reg. No: 1468880</span>
-      <span class="small-print">Copyright © 1944 - 2014 The Vegan Society</span>
+      <span class="small-print">Copyright © 1944 - 2014 The Chinese Vegan Society</span>
+      <span class="small-print"><a href="www.miitbeian.gov.cn">京ICP备09068924号-3</a></span>
     </div>
   </div>
 </footer>
