修改备案链接

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -9,7 +9,7 @@
         </div>
       </nav>
       <span class="small-print">Copyright © 1944 - 2014 The Chinese Vegan Society</span>
-      <span class="small-print"><a href="www.miitbeian.gov.cn">京ICP备09068924号-3</a></span>
+      <span class="small-print"><a href="http://www.miitbeian.gov.cn">京ICP备09068924号-3</a></span>
     </div>
   </div>
 </footer>
