--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -9,9 +9,9 @@
 .news_link:last-child span{background: none;}
 .news_link p{ margin-bottom: 0;}
 .news_link a{ color: #01dcd9; display: block; text-decoration: none;}
-.news_link a:hover{ text-decoration: none; color: #ff9e16;}
+.news_link a:hover{ text-decoration: none; color: #76f49c;}
 .news_link span{ font-size: 136px; color: #01dcd9; display: block; background: url('<%= image_url "line.jpg" %>') right center no-repeat; background-size: 2px 60%;}
-.news_link a:hover span{ color: #ff9e16;}
+.news_link a:hover span{ color: #76f49c;}
 .news_link b{ padding-top: 9%; width: 40%; display: inline-block; font: bold 14px/20px "Microsoft YaHei";}
 
 
