--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -910,7 +910,7 @@ body.show-nav{
   padding-bottom:0;
 }
 .mobile-site-nav li .active{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .mobile-site-nav a{
   color:#fff;
@@ -934,7 +934,7 @@ h3,h4,h5,h6{
 h1{
   font-size:5em;
   line-height:1.2em;
-  color:#ff9e16;
+  color:#76f49c;
   margin-left:-4px;
 }
 h2{
@@ -975,17 +975,17 @@ a{
 }
 a:hover{
   text-decoration:none;
-  color: #ff9e16;
+  color: #76f49c;
 }
 .region-content a,
 .custom-breadcrumbs a{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .block-list a{
   color:#01dcd9;
 }
 .block-list a:hover{
-  color: #ff9e16;
+  color: #76f49c;
 }
 #tinymce{
   max-width:860px;
@@ -1009,7 +1009,7 @@ a:hover{
   font-weight:normal;
 }
 #tinymce p a{
-  color:#ff9e16;
+  color:#76f49c;
 }
 #tinymce p img{
   margin:0 0 0.3em;
@@ -1082,7 +1082,7 @@ blockquote p:last-child{
   background:#01dcd9 !important;
 }
 #sliding-popup #popup-buttons button:hover{
-  background:#ff9e16 !important;
+  background:#76f49c !important;
 }
 #sliding-popup #popup-buttons button.agree-button{
   color:#fff !important;
@@ -1149,7 +1149,7 @@ blockquote p:last-child{
   margin:0 0 0.75em 0;
   font-family:"Microsoft YaHei";
   font-weight:bold;
-  color:#ff9e16;
+  color:#76f49c;
 }
 .breadcrumb{
   display:inline;
@@ -1204,7 +1204,7 @@ blockquote p:last-child{
 .sub-nav .menu .leaf a:hover,
 .sub-nav .menu .collapsed a:hover,
 .sub-nav .menu .expanded a:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 .sub-nav .menu .leaf a.active,
 .sub-nav .menu .collapsed a.active,
@@ -1288,7 +1288,7 @@ blockquote p:last-child{
 .events .field-name-field-event-date{
   display:block;
   margin:0.5em 0 1.5em 0;
-  color:#ff9e16;
+  color:#76f49c;
 }
 .events .field-name-field-event-date .field-label{
   font-size:1.5em;
@@ -1319,7 +1319,7 @@ blockquote p:last-child{
   text-decoration:underline;
 }
 .tabs ul.primary li a.active{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .site-map-menu li a{
   display:block;
@@ -1397,7 +1397,7 @@ blockquote p:last-child{
   background:#01dcd9;
 }
 #nodehierarchy-children-form #edit-submit:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 .page-content{
   width:65.11628%;
@@ -1487,7 +1487,7 @@ blockquote p:last-child{
 .button:hover{
   text-decoration:none;
   cursor:pointer;
-  color: #ff9e16;
+  color: #76f49c;
 }
 .campaign__page{
   padding:0;
@@ -1517,7 +1517,7 @@ blockquote p:last-child{
   color:#01dcd9;
   border-bottom:5px solid;
   overflow:hidden;
-  background:#ff9e16;
+  background:#76f49c;
 }
 .campaign__panel .campaign__button{
   color:#fff;
@@ -1642,8 +1642,8 @@ blockquote p:last-child{
 }
 .download__panel .field-label:hover,
 .field-type-file .field-label:hover{
-  color:#ff9e16;
-  border-color:#ff9e16;
+  color:#76f49c;
+  border-color:#76f49c;
 }
 .download__panel .file .file-icon,
 .field-type-file .file .file-icon{
@@ -1668,8 +1668,8 @@ blockquote p:last-child{
   border-color:#01dcd9;
 }
 .download__button:hover{
-  color:#ff9e16;
-  border-color:#ff9e16;
+  color:#76f49c;
+  border-color:#76f49c;
 }
 .info-social{
   color:#fff;
@@ -1760,7 +1760,7 @@ blockquote p:last-child{
 #mce-error-response{
   margin-bottom:1.5em;
   padding:0.7em;
-  background:#ff9e16;
+  background:#76f49c;
   font-family:"Microsoft YaHei";
 }
 .site-footer{
@@ -1827,7 +1827,7 @@ blockquote p:last-child{
 }
 .footer-nav .footer-nav__item .active,
 .footer-nav .leaf .active{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .small-print{
   font-size:0.75em;
@@ -1854,7 +1854,7 @@ blockquote p:last-child{
 .form-submit:hover{
   text-decoration:none;
   cursor:pointer;
-  background:#ff9e16;
+  background:#76f49c;
 }
 .page-search #edit-submit,
 .page-search .form-submit{
@@ -1944,7 +1944,7 @@ textarea{
   padding:6px 5px 5px;
 }
 .newsletter-signup__button:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 .home-search__panel{
   margin-bottom:58px;
@@ -2001,7 +2001,7 @@ textarea{
 }
 .trademark-search__option:hover{
   color:#fff;
-  background:#ff9e16;
+  background:#76f49c;
   text-decoration:none;
 }
 .trademark-search__option a{
@@ -2059,7 +2059,7 @@ textarea{
 #views-exposed-form-trademark-search-block .form-submit:hover,
 #views-exposed-form-company-search-block .form-submit:hover,
 #views-exposed-form-services-search-block .form-submit:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 #views-exposed-form-trademark-search-block .views-submit-button,
 #views-exposed-form-company-search-block .views-submit-button,
@@ -2347,7 +2347,7 @@ textarea{
 }
 .site-nav .active,
 .site-nav .active-trail{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .site-nav__item{
   margin:0;
@@ -2383,7 +2383,7 @@ textarea{
   display:block;
   font-size:0.75em;
   line-height:0.2em;
-  color:#ff9e16;
+  color:#76f49c;
 }
 .hero{
   -moz-transform:skewY(0.5deg) translate3d(0,0,0);
@@ -2434,7 +2434,7 @@ textarea{
   -moz-border-radius:60px;
   -webkit-border-radius:60px;
   border-radius:60px;
-  background:#ff9e16;
+  background:#76f49c;
   position:absolute;
   right:4em;
   top:75px;
@@ -2491,8 +2491,8 @@ textarea{
   margin-bottom:58px;
 }
 .try-it__button:hover{
-  color:#ff9e16;
-  border-color:#ff9e16;
+  color:#76f49c;
+  border-color:#76f49c;
 }
 .quick-search__button{
   padding-top:6px;
@@ -2506,7 +2506,7 @@ textarea{
   -o-transform:skewY(-0.5deg) translate3d(0,0,0);
   -webkit-transform:skewY(-0.5deg) translate3d(0,0,0);
   transform:skewY(-0.5deg) translate3d(0,0,0);
-  background:#ff9e16 url('<%= image_url "origin/take-action.jpg" %>') center center no-repeat;
+  background:#76f49c url('<%= image_url "origin/take-action.jpg" %>') center center no-repeat;
   -moz-background-size:cover;
   -o-background-size:cover;
   -webkit-background-size:cover;
@@ -2559,7 +2559,7 @@ textarea{
   color:#fff;
 }
 .take-action__button:hover{
-  background:#ff9e16;
+  background:#76f49c;
   color: #fff;
 }
 .volunteer-sign-up{
@@ -2612,8 +2612,8 @@ textarea{
   line-height:1.84615em;
 }
 .make-it-official__button:hover{
-  color:#ff9e16;
-  border-color:#ff9e16;
+  color:#76f49c;
+  border-color:#76f49c;
 }
 .block-list{
   margin:0;
@@ -2721,7 +2721,7 @@ textarea{
 .block-list__date{
   margin:0;
   font-family:"Microsoft YaHei";
-  color:#ff9e16;
+  color:#76f49c;
 }
 .list1{
   margin-left:-58px;
@@ -2843,7 +2843,7 @@ textarea{
   font-family:"Microsoft YaHei";
   background:#fff;
   font-weight:normal;
-  color:#ff9e16;
+  color:#76f49c;
   width:50px;
   height:50px;
   margin:0 20px 20px 0;
@@ -2891,7 +2891,7 @@ textarea{
 }
 .social-media__icon:hover{
   text-decoration:none;
-  background-color:#ff9e16;
+  background-color:#76f49c;
   cursor:pointer;
 }
 .search-result__panel{
@@ -2907,7 +2907,7 @@ textarea{
 .search-result__sub-category{
   display:block;
   float:none;
-  color:#ff9e16;
+  color:#76f49c;
   font-family:"Microsoft YaHei";
   text-transform:uppercase;
 }
@@ -2973,7 +2973,7 @@ textarea{
   font-size:1.5em;
 }
 .pager-current{
-  color:#ff9e16;
+  color:#76f49c;
 }
 #node-10{
   margin-bottom:1.5em;
@@ -3136,7 +3136,7 @@ textarea{
   max-width:100px;
 }
 .add-to-cart .description{
-  color:#ff9e16;
+  color:#76f49c;
 }
 .add-to-cart #edit-actions{
   margin:10px 0;
@@ -3241,7 +3241,7 @@ textarea{
 }
 .sub-nav__cart .cart-block-view-cart a:hover{
   color:#fff;
-  background:#ff9e16;
+  background:#76f49c;
 }
 .sub-nav__cart .cart-block-checkout a{
   float:right;
@@ -3265,7 +3265,7 @@ textarea{
 .sub-nav__cart .cart-block-checkout a:hover{
   text-decoration:none;
   cursor:pointer;
-  background:#ff9e16;
+  background:#76f49c;
 }
 .sub-nav__cart .cart-block-summary{
   width:100%;
@@ -3369,7 +3369,7 @@ textarea{
 #edit-actions #edit-update:hover,
 #edit-actions #edit-continue-shopping:hover{
   color:#fff;
-  background:#ff9e16 !important;
+  background:#76f49c !important;
 }
 #edit-actions .node-add-to-cart{
   float:left;
@@ -3387,7 +3387,7 @@ textarea{
   background:#01dcd9;
 }
 #edit-actions .node-add-to-cart:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 #edit-actions #edit-checkout--2{
   float:right;
@@ -3413,7 +3413,7 @@ textarea{
   text-transform:capitalize;
 }
 .remove input:hover{
-  background:#ff9e16 !important;
+  background:#76f49c !important;
 }
 .form-type-uc-quantity input{
   color:#fff;
@@ -3443,7 +3443,7 @@ textarea{
 }
 #uc-cart-pane-coupon #edit-apply:hover{
   color:#fff;
-  background:#ff9e16 !important;
+  background:#76f49c !important;
 }
 #uc-cart-checkout-form,
 #uc-cart-checkout-form--2,
@@ -3508,12 +3508,12 @@ textarea{
 #uc-cart-checkout-form #edit-continue:hover,
 #uc-cart-checkout-form--2 #edit-continue:hover,
 .uc-cart-checkout-form #edit-continue:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 #uc-cart-checkout-form .form-required,
 #uc-cart-checkout-form--2 .form-required,
 .uc-cart-checkout-form .form-required{
-  color:#ff9e16;
+  color:#76f49c;
 }
 #uc-cart-checkout-form .form-submit,
 #uc-cart-checkout-form--2 .form-submit,
@@ -3541,7 +3541,7 @@ textarea{
   text-decoration:none;
   cursor:pointer;
   color:#fff;
-  background:#ff9e16;
+  background:#76f49c;
 }
 #uc-cart-checkout-form .form-checkbox,
 #uc-cart-checkout-form--2 .form-checkbox,
@@ -3801,7 +3801,7 @@ textarea{
   border-radius:0;
 }
 .order-review-table #edit-submit:hover{
-  background:#ff9e16;
+  background:#76f49c;
 }
 .order-review-table #edit-back{
   float:left;
@@ -4277,7 +4277,7 @@ h1{
   border-radius:60px;
   font-size:0.625em;
   line-height:1.2em;
-  background:#ff9e16;
+  background:#76f49c;
   position:absolute;
   right:2em;
   top:5em;
@@ -4289,7 +4289,7 @@ h1{
 .hero__button{
   font-size:12px;
   line-height:60px;
-  background:#ff9e16;
+  background:#76f49c;
   position:absolute;
   right:5px;
   top:10px;
