--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -51,7 +51,7 @@
 	content: "\e604";
 }
 .line-orange {
-    background: none repeat scroll 0 0 #ff9e16;
+    background: none repeat scroll 0 0 #76f49c;
     height: 1px;
     margin-bottom: 20px;
     width: 30%;
