--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,16 @@
 
   <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
   <%= csrf_meta_tags %>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?004e5e254e68f25cf27d9493e93666ac";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-9 node-type-list-shop footer-columns">
 
