--- a/app/views/staffers/registrations/new.html.erb
+++ b/app/views/staffers/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Sign up</h2>
-
+<h2><center>暂不开放对外注册</center></h2>
+<% if false %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
@@ -15,3 +15,4 @@
 <% end %>
 
 <%= render "staffers/shared/links" %>
+<% end %>
